chore: #341 Setup benchmark for ProxyService and get baseline
Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>